# aetherdev

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
cli/: index.ts
scripts/: docker-entrypoint.sh  setup.sh
src/agents/: base.ts  coder.ts  pipeline.ts  planner.ts  reviewer.ts  tester.ts
src/config/: index.ts
src/core/: engine.ts  memory.ts  quality.ts  sandbox.ts
src/plugins/: loader.ts
src/utils/: fs.ts  git.ts  logger.ts  validator.ts
tests/e2e/: cli.spec.ts
tests/unit/: engine.test.ts  pipeline.test.ts
web-ui/: index.html  package.json  tailwind.config.js  vite.config.ts
web-ui/src/: App.tsx  index.css  main.tsx
web-ui/src/components/: Layout.tsx
web-ui/src/hooks/: useApi.ts
web-ui/src/pages/: ChatPage.tsx  DashboardPage.tsx  PipelinePage.tsx  PluginsPage.tsx  ReviewPage.tsx  SettingsPage.tsx
web-ui/src/store/: index.ts
